--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.1.1",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.7.7",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.6.5",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.451.0",
     "moment": "^2.30.1",
     "prettier": "^3.5.3",
